--- a/animationlogo.html/animation.html
+++ b/animationlogo.html/animation.html
@@ -8,7 +8,7 @@
 
     <body>
             <div>
-                <img src="images/facebook-icon/">
+                <img src="images/facebook-icon.jpg"></img>
                 </div>
                  </div>
     </body>
