--- a/animationlogo.html/animationBorderTransform.html
+++ b/animationlogo.html/animationBorderTransform.html
@@ -7,6 +7,6 @@
     </head>
 
     <body>
-        <div></div>
+        <div> <img id="imga" src="images/facebook-icon.jpg"></img> </div>
     </body>
 </html>
