--- a/animationlogo.html/FACEBOOK LOGO ANIMATION.html
+++ b/animationlogo.html/FACEBOOK LOGO ANIMATION.html
@@ -5,8 +5,10 @@
         <link rel="stylesheet" type="text/css" href="css/animation.css">
         <title>My First animation</title>
     </head>
-
+   
     <body>
-        <div> <img class="img" src="images/facebook-icon.jpg"></div>
+        <div class="img-frame">
+            <img src="images/facebook-icon.jpg" alt="facebook-icon"></div>   
+                 
     </body>
-</html>
+</html>+
