--- a/animationlogo.html/animation.html
+++ b/animationlogo.html/animation.html
@@ -5,11 +5,10 @@
         <link rel="stylesheet" type="text/css" href="css/animation.css">
         <title>My First animation</title>
     </head>
-
+   
     <body>
-            <div>
-                <img src="images/facebook-icon.jpg"></img>
-                </div>
-                 </div>
+        <div class="img-frame">
+            <img src="images/facebook-icon.jpg" alt="facebook-icon"></div>   
+                 
     </body>
 </html>
